Use new URI scheme for resource url